Fixed alignments of shopping cart

--- a/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.css
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.css
@@ -11,9 +11,9 @@
 }
 
 .reduction-section {
-  max-width: 300px;
+  max-width: 400px;
   margin: 0 auto;
-  padding:0px;
+  padding-right:20px;
   border-radius: 30px;
 }
 
@@ -201,12 +201,17 @@ p {
 .savings-summary p {
   margin: 0;
   padding:20px;
-  font-size: 20px;
+  font-size: 18px;
 }
 .savings-summary h3 {
   margin: 0;
   padding:20px;
   
+}
+.savings-content{
+  gap:50px;
+  display:flex;
+
 }
 
 .savings-summary {
@@ -215,9 +220,9 @@ p {
   padding: 10px;
   text-align: center;
   margin-top: 20px;
-  border-radius: 5px;
+  border-radius: 20px;
   display:flex;
-  gap:20px;
+  gap:30px;
 }
 
 
